# nix

./: .gitignore  .prototools  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml
.moon/: tasks.yml  toolchain.yaml  toolchain.yml  workspace.yml
crates/plugin/: Cargo.toml
crates/plugin/src/: config.rs  dist.rs  lib.rs  proto.rs
crates/plugin/tests/: download_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
