[package]
name = "nix"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ['cdylib']

[dev-dependencies]
proto_pdk_test_utils = "0.41.2"
starbase_sandbox = "0.9.9"
tokio = "1.48.0"

[dependencies]
extism-pdk = "1.4.1"
proto_pdk = "0.32.2"
schematic = { version = "*", default-features = false, features = ["schema"] }
serde = "1.0.228"

[features]
default = ["wasm"]
wasm = []
